--- a/static-analysis/action.yml
+++ b/static-analysis/action.yml
@@ -4,24 +4,31 @@ description: Performs static code analysis (linters, security)
 inputs:
   primary_release_branch:
     description: 'Primary release branch'
+    required: false
     default: 'main'
   module_path:
     description: 'Path to the module'
+    required: false
     default: './'
   tests_path:
     description: 'Path to the module'
+    required: false
     default: './'
   max_warning:
     description: 'Maximum number of warning before failing the linting step'
+    required: false
     default: '1'
   auditci_level:
     description: 'Security level to check against for the module codebase, will fail the step if higher'
+    required: false
     default: 'moderate'
   auditci_level_tests:
     description: 'Security level to check against for the tests codebase, will fail the step if higher'
+    required: false
     default: 'critical'
   node_version:
     description: 'Version of node to install on the host'
+    required: false
     default: 'lts/*'
 
 runs:
