--- a/integration-tests/action.yml
+++ b/integration-tests/action.yml
@@ -171,10 +171,24 @@ runs:
     - uses: actions/setup-node@v2
       with:
         node-version: ${{ inputs.node_version }}
-    - name: "Install @jahia/jahia-reporter"
+
+    - name: Install @jahia/jahia-reporter
       shell: bash
       run: | 
         npm install -g @jahia/jahia-reporter
+
+    # Download the artifacts that were saved at build time.
+    - name: Download a single artifact
+      uses: actions/download-artifact@v2
+      with:
+        name: build-artifacts
+
+    - name: List current directory
+      shell: bash
+      run: | 
+        ls -lah
+        echo "---"
+        ls -lah target/
 
     # Set the environment variables necessary for the docker-compose run
     # These are declared here to avoid having to repeat in multiple steps
