--- a/integration-tests/action.yml
+++ b/integration-tests/action.yml
@@ -35,7 +35,7 @@ inputs:
   jahia_image:
     description: 'Full name of a Jahia image (org/repo:tag)'
     required: false
-    default: ''
+    default: 'jahia/jahia-discovery-dev:8-SNAPSHOT'
   jahia_superuser_password:
     description: 'Jahia root password'
     required: false
