Adding a checkout to switch to main branch

--- a/release/action.yml
+++ b/release/action.yml
@@ -65,6 +65,7 @@ runs:
       shell: bash
       run: |
         git reset --hard
+        git checkout ${{ inputs.primary_release_branch }}
 
     - name: Added some debug details
       shell: bash
