--- a/generate-changelog/action.yml
+++ b/generate-changelog/action.yml
@@ -35,17 +35,17 @@ runs:
         git config user.email ${{ inputs.git_user_email }}
         git config user.name ${{ inputs.git_user_name }}
 
-    - name: Generate changelog
-      uses: charmixer/auto-changelog-action@v1
-      with:
-        token: ${{ inputs.github_api_token }}
+    # - name: Generate changelog
+    #   uses: charmixer/auto-changelog-action@v1
+    #   with:
+    #     token: ${{ inputs.github_api_token }}
 
-    - name: Setting up github configuration
-      shell: bash
-      run: |
-        git add CHANGELOG.md
-        git commit -m "Updated CHANGELOG.md"
-        git push --set-upstream origin HEAD:${{ inputs.primary_release_branch }}
+    # - name: Setting up github configuration
+    #   shell: bash
+    #   run: |
+    #     git add CHANGELOG.md
+    #     git commit -m "Updated CHANGELOG.md [skip ci]"
+    #     git push --set-upstream origin HEAD:${{ inputs.primary_release_branch }}
 
     # - name: Getting latest changes from the remote branch
     #   shell: bash
@@ -57,13 +57,13 @@ runs:
     #     echo "List all branches"
     #     git branch --all
 
-    # - name: Update Changelog
-    #   shell: bash
-    #   run: |
-    #     yarn
-    #     yarn add auto
-    #     GH_TOKEN=${{ inputs.github_api_token }} yarn auto changelog
-    #     git push --set-upstream origin HEAD:${{ inputs.primary_release_branch }}
+    - name: Update Changelog
+      shell: bash
+      run: |
+        yarn
+        yarn add auto
+        GH_TOKEN=${{ inputs.github_api_token }} yarn auto changelog
+        git push --set-upstream origin HEAD:${{ inputs.primary_release_branch }}
 
     - name: Persist the changelog generated for the release
       if: always()
