--- a/generate-changelog/action.yml
+++ b/generate-changelog/action.yml
@@ -34,7 +34,7 @@ runs:
       run: |
         git config user.email ${{ inputs.git_user_email }}
         git config user.name ${{ inputs.git_user_name }}
-        git checkout ${{ primary_release_branch }}
+        git checkout ${{ inputs.primary_release_branch }}
 
     - name: Getting latest changes from the remote branch
       shell: bash
