--- a/generate-changelog/action.yml
+++ b/generate-changelog/action.yml
@@ -36,6 +36,9 @@ runs:
         git config user.name ${{ inputs.git_user_name }}
         git fetch --all --tags
         git checkout ${{ inputs.primary_release_branch }}
+        mkdir -p ~/.ssh
+        ssh-keyscan github.com >> ~/.ssh/known_hosts
+        git config --global http.sslVerify false
 
     - name: Getting latest changes from the remote branch
       shell: bash
