--- a/release/action.yml
+++ b/release/action.yml
@@ -104,9 +104,7 @@ runs:
     - name:  Update github release for id ${{ inputs.release_id }}
       shell: bash
       run: |
-        yarn
-        yarn add auto
-        GH_TOKEN=${{ inputs.github_api_token }} yarn auto changelog
+        echo "Update github release for id ${{ inputs.release_id }}"
         curl -X PATCH \
         -H "Accept:application/vnd.github.v3+json" \
         -d "{\"tag_name\":\"${{ inputs.release_version }}\", \"prerelease\": false, \"draft\": false}" -u \
