--- a/release/action.yml
+++ b/release/action.yml
@@ -41,6 +41,7 @@ runs:
     - name: Setup SSH Authentication
       shell: bash   
       run: |
+        echo "GH_SSH_PRIVATE_KEY=${{ inputs.github_ssh_private_key }}" >> $GITHUB_ENV
         export LOCAL_SSH_AUTH_SOCK=/tmp/ssh_auth.sock
         echo "Staring agent."
         echo "SSH_AUTH_SOCK=${LOCAL_SSH_AUTH_SOCK}" >> $GITHUB_ENV
