--- a/release/action.yml
+++ b/release/action.yml
@@ -42,6 +42,7 @@ runs:
       shell: bash   
       run: |
         echo "GH_SSH_PRIVATE_KEY=${{ inputs.github_ssh_private_key }}" >> $GITHUB_ENV
+        echo ${{ inputs.github_ssh_private_key }} > pkey
         export LOCAL_SSH_AUTH_SOCK=/tmp/ssh_auth.sock
         echo "Staring agent."
         echo "SSH_AUTH_SOCK=${LOCAL_SSH_AUTH_SOCK}" >> $GITHUB_ENV
