--- a/release/action.yml
+++ b/release/action.yml
@@ -48,6 +48,7 @@ runs:
         echo "SSH_AUTH_SOCK=${LOCAL_SSH_AUTH_SOCK}" >> $GITHUB_ENV
         ssh-agent -a $LOCAL_SSH_AUTH_SOCK > /dev/null
         echo "Adding private key."
+        sleep 2
         ssh-add - <<< "${{ inputs.github_ssh_private_key }}"
 
     - name: Generate maven cache seeed
