--- a/release/action.yml
+++ b/release/action.yml
@@ -37,19 +37,19 @@ inputs:
 runs:
   using: "composite"
   steps:
-    # From: https://github.com/tanmancan/action-setup-ssh-agent-key/blob/main/action.yml
-    - name: Setup SSH Authentication
-      shell: bash   
-      run: |
-        echo "GH_SSH_PRIVATE_KEY=${{ inputs.github_ssh_private_key }}" >> $GITHUB_ENV
-        echo ${{ inputs.github_ssh_private_key }} > pkey
-        export LOCAL_SSH_AUTH_SOCK=/tmp/ssh_auth.sock
-        echo "Staring agent."
-        echo "SSH_AUTH_SOCK=${LOCAL_SSH_AUTH_SOCK}" >> $GITHUB_ENV
-        ssh-agent -a $LOCAL_SSH_AUTH_SOCK > /dev/null
-        echo "Adding private key."
-        sleep 2
-        ssh-add - <<< "${{ inputs.github_ssh_private_key }}"
+    # # From: https://github.com/tanmancan/action-setup-ssh-agent-key/blob/main/action.yml
+    # - name: Setup SSH Authentication
+    #   shell: bash   
+    #   run: |
+    #     echo "GH_SSH_PRIVATE_KEY=${{ inputs.github_ssh_private_key }}" >> $GITHUB_ENV
+    #     echo ${{ inputs.github_ssh_private_key }} > pkey
+    #     export LOCAL_SSH_AUTH_SOCK=/tmp/ssh_auth.sock
+    #     echo "Staring agent."
+    #     echo "SSH_AUTH_SOCK=${LOCAL_SSH_AUTH_SOCK}" >> $GITHUB_ENV
+    #     ssh-agent -a $LOCAL_SSH_AUTH_SOCK > /dev/null
+    #     echo "Adding private key."
+    #     sleep 2
+    #     ssh-add - <<< "${{ inputs.github_ssh_private_key }}"
 
     - name: Generate maven cache seeed
       shell: bash
