--- a/debug/action.yml
+++ b/debug/action.yml
@@ -49,7 +49,7 @@ runs:
       run: |
         echo "Step 1: Connect using the AWS CLI"
         echo "_____________ INSTANCE_ID: AWS EC2 Instance ID, displayed at the top of this job, or via the EC2 console"
-        echo "_____________ #> aws ssm start-session --target INSTANCE_ID
+        echo "_____________ #> aws ssm start-session --target INSTANCE_ID"
 
     - name: How to use Portforward to access Jahia UI
       shell: bash
