--- a/integration-tests/action.yml
+++ b/integration-tests/action.yml
@@ -168,6 +168,10 @@ inputs:
     description: 'Version of node to install on the host'
     required: false
     default: 'lts/*'
+  debug_session_timeout:
+    description: 'In seconds, timeout in seconds before terminating the session'
+    required: false
+    default: '7200'
 
 runs:
   using: "composite"
@@ -436,3 +440,18 @@ runs:
         name: integration-tests-results
         path: ${{ inputs.tests_path }}artifacts/results/
         retention-days: 7
+
+    - name: Keep session opened if a particular file is present
+      shell: bash
+      if: always()
+      run: |
+          WAIT_DURATION=0
+          while [[ -e /tmp/debug ]]; do
+            echo "Debug file present - $(( ++ WAIT_DURATION ))s - waiting for file removal..."
+            if [ $WAIT_DURATION -gt ${{ inputs.debug_session_timeout }} ]; then
+              echo "Reached timeout of: ${{ inputs.debug_session_timeout }}"
+              echo "Exiting the loop"
+              break
+            fi
+            sleep 1;
+          done
