--- a/integration-tests/action.yml
+++ b/integration-tests/action.yml
@@ -324,6 +324,8 @@ runs:
       run: |
         cd ${{ inputs.tests_path }}
         . ./set-env.sh
+        docker stats --all --no-stream > ./artifacts/results/docker-stats.log
+        cat ./artifacts/results/docker-stats.log
         docker-compose logs -t --tail="all" > ./artifacts/results/all-containers.log
         docker logs jahia > ./artifacts/results/jahia.log
         docker logs ${{ inputs.tests_container_name }} > ./artifacts/results/${{ inputs.tests_container_name }}.log
