--- a/integration-tests/action.yml
+++ b/integration-tests/action.yml
@@ -441,7 +441,7 @@ runs:
         report_paths: '${{ inputs.tests_path }}artifacts/results/xml_reports/**/*.xml'
 
     - name: Archive test results
-      if: always()
+      if: failure()
       uses: actions/upload-artifact@v2
       with:
         name: integration-tests-results
