--- a/integration-tests/action.yml
+++ b/integration-tests/action.yml
@@ -223,6 +223,7 @@ runs:
         echo "ELASTICSEARCH_IMAGE=${{ inputs.elasticsearch_image }}" >> $GITHUB_ENV
         echo "NEXUS_USERNAME=${{ inputs.nexus_username }}" >> $GITHUB_ENV
         echo "NEXUS_PASSWORD=${{ inputs.nexus_PASSWORD }}" >> $GITHUB_ENV
+        echo "CURRENT_BRANCH=${GITHUB_REF##*/}" >> $GITHUB_ENV
 
     - name: Display important versions and environment variables
       shell: bash
@@ -236,7 +237,7 @@ runs:
         echo "TESTS_IMAGE=${TESTS_IMAGE}"
         echo "JCUSTOMER_IMAGE=${JCUSTOMER_IMAGE}"
         echo "ELASTICSEARCH_IMAGE=${ELASTICSEARCH_IMAGE}"
-        echo "Current branch is: GITHUB_REF=${GITHUB_REF}"
+        echo "Current branch is: CURRENT_BRANCH=${CURRENT_BRANCH}"
 
     - name: Prepare export folder
       shell: bash
@@ -371,7 +372,7 @@ runs:
       shell: bash
       if: always()
       run: |
-        if [ ${{ inputs.should_skip_testrail }} == false ] || [ ${{ inputs.primary_release_branch }} == $GITHUB_REF ]; then
+        if [ ${{ inputs.should_skip_testrail }} == false ] || [ ${{ inputs.primary_release_branch }} == $CURRENT_BRANCH ]; then
           cd ${{ inputs.tests_path }}
           jahia-reporter testrail \
             --testrailUsername="${{ inputs.testrail_username }}" \
@@ -388,8 +389,8 @@ runs:
       shell: bash 
       if: failure()
       run: |
-        echo "Current branch is: $GITHUB_REF"
-        if [ ${{ inputs.primary_release_branch }} == $GITHUB_REF ] || [ master == $GITHUB_REF ]; then
+        echo "Current branch is: $CURRENT_BRANCH"
+        if [ ${{ inputs.primary_release_branch }} == $CURRENT_BRANCH ] || [ master == $CURRENT_BRANCH ]; then
           cd ${{ inputs.tests_path }}
           jahia-reporter pagerduty:incident \
             --sourcePath="artifacts/results/xml_reports" \
@@ -410,7 +411,7 @@ runs:
       shell: bash 
       if: always()
       run: |
-        if [ ${{ inputs.should_skip_notifications }} == false ] || [ ${{ inputs.primary_release_branch }} == $GITHUB_REF ]; then
+        if [ ${{ inputs.should_skip_notifications }} == false ] || [ ${{ inputs.primary_release_branch }} == $CURRENT_BRANCH ]; then
           cd ${{ inputs.tests_path }}
           jahia-reporter slack \
             --channelId="${{ inputs.slack_channel_id_notifications }}" \
@@ -428,7 +429,7 @@ runs:
       shell: bash
       if: always()
       run: |
-        if [ ${{ inputs.should_skip_zencrepes }} == false ] || [ ${{ inputs.primary_release_branch }} == $GITHUB_REF ]; then
+        if [ ${{ inputs.should_skip_zencrepes }} == false ] || [ ${{ inputs.primary_release_branch }} == $CURRENT_BRANCH ]; then
           cd ${{ inputs.tests_path }}
           jahia-reporter zencrepes \
             --webhook="https://zencrepes.jahia.com/zqueue/testing/webhook" \
